--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /SamplesAndSnippets/ObjectPooling/obj/Debug
+/SamplesAndSnippets/ObjectPooling/bin/Debug
